Churn de Crédito v3

--- a/Churn de credito.ipynb
+++ b/Churn de credito.ipynb
@@ -118,9 +118,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "b07d416f-f310-401f-b7e1-dbdd1a2516ec",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1475,6 +1473,134 @@
     "#Resultado\n",
     "#print(f'Predicted class: {y.[predicted_class[0]]}')\n",
     "print(f'Previsão de Probabilidade (Churn, Não Churn): {predicted_probabilities}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93313674-7a65-44ea-815b-3f662ff59777",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cc3f4a5-5f13-4d53-aa42-70d1aace8a1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56bb1930-e517-40ef-ba94-65f5a7aa4b90",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85b754ce-3ef6-415a-aca2-d3b7feb1b639",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e984745-acc3-4e29-8d86-d25ed7352c73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "539ca490-69a8-4146-b50d-fed0a4cae00b",
+   "metadata": {},
+   "source": [
+    "## Sistematização\n",
+    "\n",
+    "O seguinte modelo foi desenvolvido com o intuito de faze a previsão de churn com base nos dados já existentens de clientes.\n",
+    "\n",
+    "Todo o projeto foi desenvolvido seguindo algumas etapas predeterminadas como:\n",
+    "1. **Aquisição de dados:** De duas fontes, com datasets de mesmo tamanho e suas descrições;\n",
+    "2. **Preparação dos dados coletados:** Integração das fontes, limpeza, normalização, reescalonamento, padronização;\n",
+    "3. **Análise dos dados:** Tipo de cada dado, categórico ou numérico, estatísticas dos dadosm, destacar outliers;\n",
+    "4. **Variáveis mais relevantes:** Sexo, gênero, salário, score bancário;digo utilizado para a análise (se for o caso). \r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "964f24b3-69a7-4646-b3cf-6b1de2e5d035",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70cbde30-deb8-487b-913a-c996b8995677",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fce6e985-0d79-4c4d-8f2a-a971d7465511",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "901f8b77-e38d-4b7d-a6b8-9628e184e346",
+   "metadata": {},
+   "source": [
+    "Aquisição de Dados:\n",
+    "\n",
+    "a) Os dados deverão ser extraídos de pelo menos duas fontes de dados existentes em https://basedosdados.org/dataset. Outras fontes de dados serão aceitas, desde que haja a descrição do repositório de dados públicos de onde elas foram olhidas;\n",
+    "b) Os dois datasets devem apresentar características que permitam a sua integração, ou seja, que possam ser manipulados de forma a se tornar um só datset maior;\n",
+    "c) Após a integração dos dois datasets originais, o dataset resultante deverá possuir pelo menos 0 registros;\n",
+    "d) Descrever os datasets escolhidos e o forto utilizado.\n",
+    "\n",
+    "Preparação ds dados coletados:\n",
+    "\n",
+    "Devem ser descritas as ações que seão necessárias para:\n",
+    "\n",
+    "a) A integração d tais fontes de dados;\n",
+    "\n",
+    "b) Limpeza, normalizações, reescalonamentos, padronizações e demais ações necessár à adequação dos dados;\n",
+    "\n",
+    "Análise dos dados:\n",
+    "\n",
+    "a) Descrever o tipo de cada dado coletado, classificando-o como categórico ou numérico e escolhendo o melhor subtipo (nominal, ordinal, discreto, contínuo, etc) e as ações tomadas para dequá-lo ao formato escolhido;\n",
+    "\n",
+    "b) Calcular e descrever os parâmetros estatísticos básicos dos dados já tratados, informando sua média, desvio padrão, coeficiente de variação, mediana, moda e os limites dos quartis de pelo menos uma varivel numérica contida no dataset;\n",
+    "\n",
+    "c) Baseado nos z-scores -3 e +3, destacar quantos registros podem ser considerados outliers, informando qual variável foi utilizada para tal mensuração e qual tratamento deverá ser dado ao registro como um todo, ou seja, se o registro será descartado, receberá alguma forma de tratamento ou se será pcessado paralelamente aos demais;\n",
+    "\n",
+    "Exibir as variáveis considerdas mais relevantes dentro do dataset:\n",
+    "\n",
+    "a) Utilizando, no total, pelo menos três tipos de gráficos distintos. Podem ser utilizadas variáeis distintas para cada tipo de gráfico;\n",
+    "\n",
+    "b) Tecendo considerações sobre o porquê do gráfico escolhido ser o mais adequadpara a exibição das variáveis escolhis.\n",
+    "\n",
+    "Discutir os resultado inferidos.\n",
+    "\n",
+    "Descrever as ferramentastilizadas para a manipulação e análise dos dados.\n",
+    " oderão ser utilizadas para o tratamento e exibição dos dados quaisquer ferramentas que esteja ao alcance do aluno, podendo ser planilhas de cálculo, linguagens de programação ou ferramentas on-line, incluindo-se ai, ferramentas de IA, desde que desctas suas características e a forma com que foi utilizada.\n",
+    "\n",
+    "O trabalho deveer realizado em grupos com, no máximo, 5 (cinco) integrantes.\n",
+    "\n",
+    "Entregáveis: - O trabalho será entregue sob a forma de apresentação gravada em vídeo, publicado no Youtube, com duração de até 8 minutos, abordando todos os aspectos descritos acima. A voz e imagem de pelo menos um integrante do grupo devem estar presentes no vídeo.\n",
+    "\n",
+    "- Deve ser submetido um arquivo PDF contendo o conteúdo da apresentação utilizada no vídeo e o link do vídeo publicado.\n",
+    "\n",
+    "- Deve ser disponibilizado um link por onde possam ser visualizados os arquivos contendo os datasets originais e integrado (obrigatório) e o código utilizado para a análise (se for o caso). \n"
    ]
   },
   {
