Tidying Up the README

--- a/notebooks/Churn de credito.ipynb
+++ b/notebooks/Churn de credito.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Lendo arquivos csv\n",
+    "#Reading the CSV archives\n",
     "df1 = pd.read_csv('../Dados/Customer-Churn-Records1.csv', delimiter=\";\")\n",
     "df2 = pd.read_csv('../Dados/Customer-Churn-Records2.csv', delimiter=\";\")\n",
     "df3 = pd.read_csv('../Dados/Customer-Churn-Records3.csv', delimiter=\";\")"
